--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&family=Open+Sans:wght@400;700&family=Varela+Round&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
 </head>
+<!-- Start Header  -->
+<div class="header" id="header">
+    <div class="container">
+        <a href="#" class="logo">Elzero</a>
+        <ul class="main-nav">
+            <li><a href="#article">Article</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#">Ohter Links</a></li>
+        </ul>
+    </div>
+</div>
+<!-- End Header  -->
 
 <body>
 
