--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
             <div class="box">
@@ -123,7 +123,7 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
             <div class="box">
@@ -135,7 +135,7 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
             <div class="box">
@@ -147,7 +147,7 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
             <div class="box">
@@ -159,7 +159,7 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
             <div class="box">
@@ -171,7 +171,7 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
             <div class="box">
@@ -183,7 +183,7 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
             <div class="box">
@@ -195,90 +195,187 @@
                 <div class="info">
                     <a href="#">Read More</a>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                  </div>
+                </div>
             </div>
 
-            
+
         </div>
     </div>
     <!-- End Articles -->
 
     <!-- Strat Gallery -->
-        <div class="gallery" id="gallery">
-            <h2 class="main-title">Gallery</h2>
-            <div class="container">
-                <div class="box">
-                    <div class="image">
-                        <img src="images/gallery-01.png" alt="">
-                    </div>
+    <div class="gallery" id="gallery">
+        <h2 class="main-title">Gallery</h2>
+        <div class="container">
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-01.png" alt="">
                 </div>
+            </div>
 
-                <div class="box">
-                    <div class="image">
-                        <img src="images/gallery-02.png" alt="">
-                    </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-02.png" alt="">
                 </div>
+            </div>
 
-                <div class="box">
-                    <div class="image">
-                        <img src="images/gallery-03.jpg" alt="">
-                    </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-03.jpg" alt="">
                 </div>
+            </div>
 
-                <div class="box">
-                    <div class="image">
-                        <img src="images/gallery-04.png" alt="">
-                    </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-04.png" alt="">
                 </div>
-                
-                <div class="box">
-                    <div class="image">
-                        <img src="images/gallery-05.jpg" alt="">
-                    </div>
-                </div>
+            </div>
 
-                <div class="box">
-                    <div class="image">
-                        <img src="images/gallery-06.png" alt="">
-                    </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-05.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-06.png" alt="">
                 </div>
             </div>
         </div>
+    </div>
     <!-- End Gallery -->
     <!-- Start Features -->
-        <div class="features" id="features">
-            <h2 class="main-title">Features</h2>
-            <div class="container">
+    <div class="features" id="features">
+        <h2 class="main-title">Features</h2>
+        <div class="container">
 
-                <div class="box quality">
-                    <div class="img-holder">
-                        <img src="images/features-01.jpg" alt="">
-                    </div>
-                    <h2>Quality</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
-                    <a href="#">More</a>
+            <div class="box quality">
+                <div class="img-holder">
+                    <img src="images/features-01.jpg" alt="">
                 </div>
+                <h2>Quality</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
 
-                <div class="box time">
-                    <div class="img-holder">
-                        <img src="images/features-02.jpg" alt="">
-                    </div>
-                    <h2>Time</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
-                    <a href="#">More</a>
+            <div class="box time">
+                <div class="img-holder">
+                    <img src="images/features-02.jpg" alt="">
                 </div>
+                <h2>Time</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
 
-                <div class="box passion">
-                    <div class="img-holder">
-                        <img src="images/features-03.jpg" alt="">
-                    </div>
-                    <h2>Passion</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
-                    <a href="#">More</a>
+            <div class="box passion">
+                <div class="img-holder">
+                    <img src="images/features-03.jpg" alt="">
                 </div>
+                <h2>Passion</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
             </div>
         </div>
+    </div>
     <!-- End Features-->
+
+    <!-- Start Testimonials -->
+    <div class="testimonials" id="testimonials">
+        <h2 class="main-title">Testimonials</h2>
+        <div class="container">
+            <div class="box">
+                <img src="images/avatar-01.png" alt="">
+                <h3>Mohamed Farag</h3>
+                <span class="title">Full Stack Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus quaerat ducimus</p>
+            </div>
+
+            <div class="box">
+                <img src="images/avatar-02.png" alt="">
+                <h3>Mohamed Ibrahim</h3>
+                <span class="title">Full Stack Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus quaerat ducimus</p>
+            </div>
+
+            <div class="box">
+                <img src="images/avatar-03.png" alt="">
+                <h3>Shady Nabil</h3>
+                <span class="title">Full Stack Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus quaerat ducimus</p>
+            </div>
+
+            <div class="box">
+                <img src="images/avatar-04.png" alt="">
+                <h3>Amr Hendawy</h3>
+                <span class="title">Full Stack Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus quaerat ducimus</p>
+            </div>
+
+            <div class="box">
+                <img src="images/avatar-05.png" alt="">
+                <h3>Sherief Ashraf</h3>
+                <span class="title">Full Stack Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus quaerat ducimus</p>
+            </div>
+
+            <div class="box">
+                <img src="images/avatar-06.png" alt="">
+                <h3>Osama Mohamed</h3>
+                <span class="title">Full Stack Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus quaerat ducimus</p>
+            </div>
+        </div>
+    </div>
+    <!-- End Testimonials -->
 
 
 </body>
