--- a/index.html
+++ b/index.html
@@ -579,55 +579,94 @@
                 <i class="fas fa-user-shield fa-4x"></i>
                 <h3>Security</h3>
                 <div class="info">
-                  <a href="#">Details</a>
+                    <a href="#">Details</a>
                 </div>
-              </div>
+            </div>
 
-              <div class="box">
+            <div class="box">
                 <i class="fas fa-tools fa-4x"></i>
                 <h3>Fixing Issues</h3>
                 <div class="info">
-                  <a href="#">Details</a>
+                    <a href="#">Details</a>
                 </div>
-              </div>
+            </div>
 
-              <div class="box">
+            <div class="box">
                 <i class="fas fa-map-marked-alt fa-4x"></i>
                 <h3>Location</h3>
                 <div class="info">
-                  <a href="#">Details</a>
+                    <a href="#">Details</a>
                 </div>
-              </div>
+            </div>
 
-              <div class="box">
+            <div class="box">
                 <i class="fas fa-laptop-code fa-4x"></i>
                 <h3>Coding</h3>
                 <div class="info">
-                  <a href="#">Details</a>
+                    <a href="#">Details</a>
                 </div>
-              </div>
-              
-              <div class="box">
+            </div>
+
+            <div class="box">
                 <i class="fas  fa-palette fa-4x"></i>
                 <h3>Design</h3>
                 <div class="info">
-                  <a href="#">Details</a>
+                    <a href="#">Details</a>
                 </div>
-              </div>
+            </div>
 
-              <div class="box">
+            <div class="box">
                 <i class="fas fa-bullhorn fa-4x"></i>
                 <h3>Marketing</h3>
                 <div class="info">
-                  <a href="#">Details</a>
+                    <a href="#">Details</a>
                 </div>
-              </div>
+            </div>
 
-              
+
         </div>
     </div>
     <!-- End Sevices -->
 
+    <!-- Start Skills -->
+        <div class="our-skills" id="our-skills">
+            <h2 class="main-title">Our Skills</h2>
+            <div class="container">
+                <img src="images/skills.png" alt="">
+                <div class="skills">
+
+                    <div class="skill">
+                        <h3>HTML <Span>80%</Span></h3>
+                        <div class="the-progress">
+                            <span style="width: 80%;"></span>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <h3>CSS <Span>85%</Span></h3>
+                        <div class="the-progress">
+                            <span style="width: 85%;"></span>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <h3>JavaScript<Span>70%</Span></h3>
+                        <div class="the-progress">
+                            <span style="width: 70%;"></span>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <h3>Python<Span>80%</Span></h3>
+                        <div class="the-progress">
+                            <span style="width: 80%;"></span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    <!-- End Skills -->
 
 </body>
 
