--- a/index.html
+++ b/index.html
@@ -629,85 +629,141 @@
     <!-- End Sevices -->
 
     <!-- Start Skills -->
-        <div class="our-skills" id="our-skills">
-            <h2 class="main-title">Our Skills</h2>
-            <div class="container">
-                <img src="images/skills.png" alt="">
-                <div class="skills">
+    <div class="our-skills" id="our-skills">
+        <h2 class="main-title">Our Skills</h2>
+        <div class="container">
+            <img src="images/skills.png" alt="">
+            <div class="skills">
 
-                    <div class="skill">
-                        <h3>HTML <Span>80%</Span></h3>
-                        <div class="the-progress">
-                            <span style="width: 80%;"></span>
-                        </div>
+                <div class="skill">
+                    <h3>HTML <Span>80%</Span></h3>
+                    <div class="the-progress">
+                        <span style="width: 80%;"></span>
                     </div>
-
-                    <div class="skill">
-                        <h3>CSS <Span>85%</Span></h3>
-                        <div class="the-progress">
-                            <span style="width: 85%;"></span>
-                        </div>
-                    </div>
-
-                    <div class="skill">
-                        <h3>JavaScript<Span>70%</Span></h3>
-                        <div class="the-progress">
-                            <span style="width: 70%;"></span>
-                        </div>
-                    </div>
-
-                    <div class="skill">
-                        <h3>Python<Span>80%</Span></h3>
-                        <div class="the-progress">
-                            <span style="width: 80%;"></span>
-                        </div>
-                    </div>
-
                 </div>
+
+                <div class="skill">
+                    <h3>CSS <Span>85%</Span></h3>
+                    <div class="the-progress">
+                        <span style="width: 85%;"></span>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <h3>JavaScript<Span>70%</Span></h3>
+                    <div class="the-progress">
+                        <span style="width: 70%;"></span>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <h3>Python<Span>80%</Span></h3>
+                    <div class="the-progress">
+                        <span style="width: 80%;"></span>
+                    </div>
+                </div>
+
             </div>
         </div>
+    </div>
     <!-- End Skills -->
 
     <!-- Start Work Steps -->
-        <div class="work-steps" id="work-steps">
-            <h2 class="main-title">How It Works ?</h2>
-            <div class="container">
-                <img src="images/work-steps.png" alt="" class="image">
-                <div class="info">
+    <div class="work-steps" id="work-steps">
+        <h2 class="main-title">How It Works ?</h2>
+        <div class="container">
+            <img src="images/work-steps.png" alt="" class="image">
+            <div class="info">
 
-                    <div class="box">
-                        <img src="images/work-steps-1.png" alt="">
-                        <div class="text">
-                            <h3>Business Analysis</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum
-                                recusandae debitis vel</p>
-                        </div>
+                <div class="box">
+                    <img src="images/work-steps-1.png" alt="">
+                    <div class="text">
+                        <h3>Business Analysis</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam
+                            quis laborum
+                            recusandae debitis vel</p>
                     </div>
-
-                    <div class="box">
-                        <img src="images/work-steps-2.png" alt="">
-                        <div class="text">
-                            <h3>Architecture</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum
-                                recusandae debitis vel</p>
-                        </div>
-                    </div>
-                    
-
-                    <div class="box">
-                        <img src="images/work-steps-3.png" alt="">
-                        <div class="text">
-                            <h3>Developement</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum
-                                recusandae debitis vel</p>
-                        </div>
-                    </div>
-                    
-
                 </div>
+
+                <div class="box">
+                    <img src="images/work-steps-2.png" alt="">
+                    <div class="text">
+                        <h3>Architecture</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam
+                            quis laborum
+                            recusandae debitis vel</p>
+                    </div>
+                </div>
+
+
+                <div class="box">
+                    <img src="images/work-steps-3.png" alt="">
+                    <div class="text">
+                        <h3>Developement</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam
+                            quis laborum
+                            recusandae debitis vel</p>
+                    </div>
+                </div>
+
+
             </div>
         </div>
+    </div>
     <!-- End Work Steps -->
+
+    <!-- Start Events -->
+    <div class="events" id="events">
+        <h2 class="main-title">LATEST EVENTS</h2>
+        <div class="container">
+            <img src="images/events.png" alt="">
+            <div class="info">
+
+                <div class="time">
+
+                    <div class="unit">
+                        <span>15</span>
+                        <span>Days</span>
+                    </div>
+
+                    <div class="unit">
+                        <span>08</span>
+                        <span>Hours</span>
+                    </div>
+
+                    <div class="unit">
+                        <span>45</span>
+                        <span>Minutes</span>
+                    </div>
+
+                    <div class="unit">
+                        <span>55</span>
+                        <span>Seconds</span>
+                    </div>
+
+                </div>
+
+                <h2 class="title">
+                    Tech Masters Event 2021
+                </h2>
+
+                <p class="description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut
+                    adipisci quam
+                    ratione aliquam excepturi nulla in harum, veritatis porro
+                </p>
+
+            </div>
+            <div class="subscribe">
+                <form action="">
+                    <input type="email" placeholder="Enter Your Email">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+
+    </div>
+    <!-- End Events -->
 
 </body>
 
