--- a/index.html
+++ b/index.html
@@ -787,7 +787,8 @@
                 <a href="#">Choose Plan</a>
             </div>
 
-            <div class="box">
+            <div class="box popular">
+                <div class="label">Most Popular</div>
                 <h3 class="title">Advanced</h3>
                 <img src="images/hosting-advanced.png" alt="">
                 <div class="price">
