--- a/index.html
+++ b/index.html
@@ -824,6 +824,7 @@
         </div>
     </div>
     <!-- End Pricing -->
+
     <!-- Start Videos -->
         <div class="videos" id="videos">
             <h2 class="main-title">Top Videos</h2>
@@ -853,6 +854,39 @@
             </div>
         </div>
     <!-- End Videos -->
+
+    <!-- Start Stats -->
+    <div class="stats" id="stats">
+        <h2>Our Awesome Stats</h2>
+        <div class="container">
+
+            <div class="box">
+                <i class="far fa-user fa-2x fa-wf"></i>
+                <span class="number">300</span>
+                <span class="text">clients</span>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-code fa-2x fa-fw"></i>
+                <span class="number">400</span>
+                <span class="text">Projects</span>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+                <span class="number">12</span>
+                <span class="text">Countries</span>
+            </div>
+            
+            <div class="box">
+                <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+                <span class="number">500k</span>
+                <span class="text">Money</span>
+            </div>
+        </div>
+
+    </div>
+    <!-- End Stats -->
 
 </body>
 
