--- a/index.html
+++ b/index.html
@@ -826,33 +826,33 @@
     <!-- End Pricing -->
 
     <!-- Start Videos -->
-        <div class="videos" id="videos">
-            <h2 class="main-title">Top Videos</h2>
-            <div class="container">
-                <div class="holder">
-                    <div class="list">
-                        <div class="name">
-                            Top Videos
-                            <i class="fas fa-random"></i>
-                        </div>
-                        <ul>
-                            <li>How To Create Sub Domain<span>05:18</span></li>
-                            <li>Playing With The DNS <span>03:18</span></li>
-                            <li>Everything About The Virtual Hosts <span>05:25</span></li>
-                            <li>How To Monitor Your Website <span>04:16</span></li>
-                            <li>Uncharted Beating The Last Boss <span>07:48</span></li>
-                            <li>Ys Oath In Felghana Overview <span>03:12</span></li>
-                            <li>Ys Series All Games Ending <span>08:10</span></li>
-                          </ul>
+    <div class="videos" id="videos">
+        <h2 class="main-title">Top Videos</h2>
+        <div class="container">
+            <div class="holder">
+                <div class="list">
+                    <div class="name">
+                        Top Videos
+                        <i class="fas fa-random"></i>
                     </div>
-                    <div class="preview">
-                        <img src="images/video-preview.jpg" alt="">
-                        <div class="info">Everything About The Virtual Hosts</div>
+                    <ul>
+                        <li>How To Create Sub Domain<span>05:18</span></li>
+                        <li>Playing With The DNS <span>03:18</span></li>
+                        <li>Everything About The Virtual Hosts <span>05:25</span></li>
+                        <li>How To Monitor Your Website <span>04:16</span></li>
+                        <li>Uncharted Beating The Last Boss <span>07:48</span></li>
+                        <li>Ys Oath In Felghana Overview <span>03:12</span></li>
+                        <li>Ys Series All Games Ending <span>08:10</span></li>
+                    </ul>
+                </div>
+                <div class="preview">
+                    <img src="images/video-preview.jpg" alt="">
+                    <div class="info">Everything About The Virtual Hosts</div>
 
-                    </div>
                 </div>
             </div>
         </div>
+    </div>
     <!-- End Videos -->
 
     <!-- Start Stats -->
@@ -877,7 +877,7 @@
                 <span class="number">12</span>
                 <span class="text">Countries</span>
             </div>
-            
+
             <div class="box">
                 <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
                 <span class="number">500k</span>
@@ -887,6 +887,33 @@
 
     </div>
     <!-- End Stats -->
+
+    <!-- Start Discount -->
+    <div class="discount" id="discount">
+        <div class="image">
+            <div class="content">
+                <h2>We Have A Discount</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur,
+                    recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam
+                    vel similique laborum dicta aperiam odit doloribus corporis.
+                </p>
+                <img src="images/discount.png" alt="">
+            </div>
+        </div>
+        <div class="form">
+            <div class="content">
+                <h2>Request A Discount</h2>
+                <form action="">
+                    <input class="input" type="text" placeholder="Your Name" name="name" />
+                    <input class="input" type="email" placeholder="Your Email" name="email" />
+                    <input class="input" type="text" placeholder="Your Phone" name="mobile" />
+                    <textarea class="input" placeholder="Tell Us About Your Needs" name="message"></textarea>
+                    <input type="submit" value="Send" />
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End Discount -->
 
 </body>
 
