--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 
         </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Articles -->
 
     <!-- Strat Gallery -->
@@ -714,6 +715,8 @@
 
     <!-- Start Events -->
     <div class="events" id="events">
+        <div class="dots dots-up"></div>
+        <div class="dots dots-down"></div>
         <h2 class="main-title">LATEST EVENTS</h2>
         <div class="container">
             <img src="images/events.png" alt="">
@@ -767,6 +770,8 @@
 
     <!-- Start Pricing -->
     <div class="pricing" id="pricing">
+        <div class="dots dots-up"></div>
+        <div class="dots dots-down"></div>
         <h2 class="main-title">PRICING PLANS</h2>
         <div class="container">
 
@@ -958,7 +963,7 @@
                     <i class="fas fa-map-marker-alt fa-fw"></i>
                     <div class="info">Egypt, Giza, Inside The Sphinx, Room Number 220</div>
                 </div>
-                
+
                 <div class="line">
                     <i class="far fa-clock fa-fw"></i>
                     <div class="info">Business Hours: From 10:00 To 18:00</div>
